samples/_failures_safe/1761604703_784c51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab13419f.c: In function ‘main’:
./samples/SAFE/__tmp_ab13419f.c:179:44: error: expected ‘)’ at end of input
  179 |             printf("Result: %.6f\n", result
      |                   ~                        ^
      |                                            )
./samples/SAFE/__tmp_ab13419f.c:179:13: error: expected declaration or statement at end of input
  179 |             printf("Result: %.6f\n", result
      |             ^~~~~~
./samples/SAFE/__tmp_ab13419f.c:179:13: error: expected declaration or statement at end of input
